--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>bai test github</title>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
         <h1>bai test github</h1>
+        <button>Submit</button>
     </body>
 </html>
