change1 index.html

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>bai test github</h1>
         <button>Submit</button>
+        <button>change</button>
     </body>
 </html>
